<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:scrollbars="vertical"
    android:fillViewport="true"
    android:layoutDirection="ltr"
    android:background="@drawable/splash"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.registration.SignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/_144sdp"
            android:layout_height="@dimen/_165sdp"
            android:layout_marginTop="@dimen/_25sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:importantForAccessibility="no"
            android:src="@drawable/logo" />

        <TextView
            android:text="@string/create_account"
            android:textStyle="bold"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:minHeight="@dimen/_346sdp"
            android:padding="@dimen/_25sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/top_rounded_white_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <EditText
                android:id="@+id/et_email"
                android:textColor="@color/primary"
                android:background="@drawable/register_placeholder_background"
                android:inputType="text"
                android:paddingHorizontal="@dimen/_12sdp"
                android:paddingVertical="@dimen/_6sdp"
                android:hint="@string/email"
                android:textColorHint="@color/primary"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="TextFields"
                android:importantForAutofill="no" />

            <ImageView
                android:src="@drawable/email"
                app:layout_constraintTop_toTopOf="@id/et_email"
                app:layout_constraintBottom_toBottomOf="@id/et_email"
                app:layout_constraintEnd_toEndOf="@id/et_email"
                android:layout_margin="@dimen/_12sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAccessibility="no" />

            <EditText
                android:id="@+id/et_name"
                android:background="@drawable/register_placeholder_background"
                android:inputType="text"
                android:textColor="@color/primary"
                android:layout_marginTop="@dimen/_12sdp"
                android:paddingHorizontal="@dimen/_12sdp"
                android:paddingVertical="@dimen/_6sdp"
                android:hint="@string/name_register"
                android:textColorHint="@color/primary"
                app:layout_constraintTop_toBottomOf="@id/et_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="TextFields"
                android:importantForAutofill="no" />

            <ImageView
                android:src="@drawable/username"
                app:layout_constraintTop_toTopOf="@id/et_name"
                app:layout_constraintBottom_toBottomOf="@id/et_name"
                app:layout_constraintEnd_toEndOf="@id/et_name"
                android:layout_margin="@dimen/_12sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAccessibility="no" />

            <EditText
                android:id="@+id/et_password"
                android:background="@drawable/register_placeholder_background"
                android:inputType="numberPassword"
                android:textColor="@color/primary"
                android:layout_marginTop="@dimen/_12sdp"
                android:paddingHorizontal="@dimen/_12sdp"
                android:paddingVertical="@dimen/_6sdp"
                android:hint="@string/password"
                android:textColorHint="@color/primary"
                app:layout_constraintTop_toBottomOf="@id/et_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="TextFields"
                android:importantForAutofill="no" />

            <ImageView
                android:src="@drawable/password"
                app:layout_constraintTop_toTopOf="@id/et_password"
                app:layout_constraintBottom_toBottomOf="@id/et_password"
                app:layout_constraintEnd_toEndOf="@id/et_password"
                android:layout_margin="@dimen/_12sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAccessibility="no" />

            <EditText
                android:id="@+id/et_confirm_password"
                android:background="@drawable/register_placeholder_background"
                android:inputType="numberPassword"
                android:layout_marginTop="@dimen/_12sdp"
                android:textColor="@color/primary"
                android:paddingHorizontal="@dimen/_12sdp"
                android:paddingVertical="@dimen/_6sdp"
                android:hint="@string/confirm_password"
                android:textColorHint="@color/primary"
                app:layout_constraintTop_toBottomOf="@id/et_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="TextFields"
                android:importantForAutofill="no" />

            <ImageView
                android:src="@drawable/password"
                app:layout_constraintTop_toTopOf="@id/et_confirm_password"
                app:layout_constraintBottom_toBottomOf="@id/et_confirm_password"
                app:layout_constraintEnd_toEndOf="@id/et_confirm_password"
                android:layout_margin="@dimen/_12sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAccessibility="no" />

            <TextView
                android:id="@+id/tv_have_account"
                android:text="@string/have_account"
                android:textColor="@color/primary"
                app:layout_constraintTop_toBottomOf="@id/et_confirm_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="@dimen/_25sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btn_sign_up"
                android:text="@string/sign_up"
                android:background="@drawable/btn_background"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>